--- a/app/src/main/res/color/chip_bg_states_alt.xml
+++ b/app/src/main/res/color/chip_bg_states_alt.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#1DC690" android:state_checked="true"/>
-    <item android:color="#F04854"/>
+    <item android:color="#F04854" android:state_checked="true"/>
+    <item android:color="#1DC690"/>
 </selector>
