--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -29,28 +29,22 @@
             android:gravity="bottom|center_horizontal|center_vertical"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <com.google.android.material.chip.Chip
+                android:id="@+id/analyzeButton"
+                android:layout_width="100dp"
+                android:layout_height="65dp"
                 android:layout_weight="0"
-                android:orientation="horizontal"
-                android:showDividers="middle">
-
-                <Button
-                    android:id="@+id/analyzeButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Analyze" />
-
-                <Button
-                    android:id="@+id/buttonclearAnalysysButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Clear" />
-            </LinearLayout>
+                android:checkable="true"
+                android:elevation="6dp"
+                android:text="Analyze"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:translationY="-20dp"
+                app:checkedIconVisible="false"
+                app:chipBackgroundColor="@color/chip_bg_states_alt"
+                app:chipIconVisible="false"
+                app:chipSurfaceColor="#FFFFFF" />
 
         </LinearLayout>
     </FrameLayout>
