--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                 android:layout_weight="0"
                 android:checkable="true"
                 android:text="Live Detection"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:translationY="15dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_bg_states"
