--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.example.sistemidigitali.MainActivity"
+        android:name="com.example.sistemidigitali.views.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
 </navigation>
