--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -71,6 +71,18 @@
             android:layout_height="wrap_content"
             android:background="#99000000"
             android:visibility="gone" />
+
+        <RelativeLayout
+            android:id="@+id/loadingIndicatorPanel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+        </RelativeLayout>
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
