performance improvements + bugfixes

--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -49,13 +49,13 @@
                 android:layout_marginRight="0dp"
                 android:layout_marginBottom="0dp"
                 android:layout_weight="0"
-                android:checkable="true"
+                android:checkable="false"
                 android:elevation="6dp"
                 android:text="Analyze"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
-                android:translationY="-20dp"
+                android:translationY="-50dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_bg_states_alt"
                 app:chipEndPadding="10dp"
