--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,11 +49,11 @@
                 android:layout_marginRight="0dp"
                 android:layout_marginBottom="0dp"
                 android:layout_weight="0"
-                android:checkable="true"
+                android:checkable="false"
                 android:text="Live Detection"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"
-                android:translationY="15dp"
+                android:translationY="35dp"
                 app:checkedIconVisible="false"
                 app:chipBackgroundColor="@color/chip_bg_states"
                 app:chipEndPadding="10dp"
@@ -78,7 +78,7 @@
                 android:layout_weight="0"
                 android:clickable="true"
                 android:translationX="-25dp"
-                android:translationY="24dp"
+                android:translationY="44dp"
                 app:backgroundTint="#FFFFFF"
                 app:srcCompat="?android:attr/fingerprintAuthDrawable" />
 
@@ -98,7 +98,7 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:translationX="25dp"
-                android:translationY="-50dp"
+                android:translationY="-70dp"
                 app:backgroundTint="#FFFFFF"
                 app:srcCompat="@android:drawable/stat_notify_sync" />
         </LinearLayout>
@@ -117,7 +117,7 @@
                 android:layout_weight="0"
                 android:clickable="true"
                 android:translationX="-25dp"
-                android:translationY="-50dp"
+                android:translationY="-70dp"
                 app:backgroundTint="#FFFFFF"
                 app:srcCompat="@android:drawable/ic_menu_gallery"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -139,7 +139,7 @@
                 android:hapticFeedbackEnabled="true"
                 android:scaleX="1.5"
                 android:scaleY="1.5"
-                android:translationY="-50dp"
+                android:translationY="-70dp"
                 app:backgroundTint="#FFFFFF"
                 app:srcCompat="?android:attr/listChoiceIndicatorSingle"
                 tools:ignore="SpeakableTextPresentCheck" />
