--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -38,6 +38,11 @@
                 android:layout_width="100dp"
                 android:layout_height="73dp"
                 android:checkable="false"
+                android:gravity="center"
+                android:text="Measure"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
                 android:translationY="50dp"
                 app:checkedIconEnabled="false"
                 app:chipBackgroundColor="@color/chip_bg_states_alt"
@@ -68,6 +73,7 @@
                 android:layout_weight="0"
                 android:checkable="false"
                 android:elevation="6dp"
+                android:gravity="center"
                 android:text="Analyze"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
