--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
                 android:layout_weight="0"
                 android:checkable="false"
                 android:text="Live Detection"
+                android:textAlignment="center"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 android:translationY="35dp"
