--- a/app/src/main/res/layout/activity_analyze.xml
+++ b/app/src/main/res/layout/activity_analyze.xml
@@ -58,6 +58,12 @@
                     android:layout_height="match_parent"
                     tools:srcCompat="@tools:sample/avatars" />
 
+                <ImageView
+                    android:id="@+id/depthMapView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:srcCompat="@tools:sample/avatars" />
+
                 <com.example.sistemidigitali.views.LiveDetectionView
                     android:id="@+id/liveDetectionViewAnalyze"
                     android:layout_width="match_parent"
@@ -125,6 +131,27 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:gravity="bottom|left"
+            android:orientation="horizontal">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/showDepthMapButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:clickable="true"
+                android:elevation="6dp"
+                android:translationX="25dp"
+                android:translationY="-59dp"
+                app:backgroundTint="#FFFFFF"
+                app:srcCompat="@android:drawable/ic_menu_rotate" />
+
+        </LinearLayout>
+
         <View
             android:id="@+id/backgroundOverlayAnalyze"
             android:layout_width="wrap_content"
@@ -160,6 +187,23 @@
                 android:translationY="-62dp"
                 android:visibility="gone" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom|left">
+
+            <ProgressBar
+                android:id="@+id/showDepthMapLoadingIndicator"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:translationX="29dp"
+                android:translationY="-62dp"
+                android:visibility="gone" />
+        </RelativeLayout>
+
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
